# studentvoice

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.web  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  compose.yaml  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  sbom.yml
.openai/: hosting.json
app/: chatgpt-auth.ts  data.ts  globals.css  layout.tsx  page.tsx
app/components/: EvidenceMark.tsx  GitHubRepoBadge.tsx  SiteHeader.tsx
app/methodology/: page.tsx
app/review/: ReviewControl.tsx  page.tsx  store.ts
app/submit/: page.tsx
docs/: architecture.md  legal-evidence-export.md  moderation-handbook.md  operations.md  privacy.md  threat-model.md
drizzle/: 0000_review_control.sql  0001_profile_links.sql  0002_expand_profile_links.sql
scripts/: import-review-artifacts.ps1
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  audit.py  config.py  crypto.py  database.py  main.py  models.py  policies.py  schemas.py  security.py  seed.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial.py
services/api/tests/: test_api.py
services/worker/: Dockerfile  MODEL_CARD.md  pyproject.toml
services/worker/studentvoice_worker/: __init__.py  cli.py  integrity.py  pipeline.py  policy.py
services/worker/tests/: test_integrity.py
tests/: rendered-html.test.mjs
tools/: build_review_proposals.py  private_review_server.py
worker/: index.ts
(+21 files in other folders)
