[project]
name = "studentvoice-api"
version = "0.1.0"
description = "Evidence-domain API and editorial publication gates for StudentVoice"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.41",
  "pydantic-settings==2.10.1",
  "psycopg[binary]==3.2.9",
  "cryptography==45.0.5",
  "blake3==1.0.5",
  "alembic==1.16.4",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "httpx==0.28.1", "ruff==0.12.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
