[project]
name = "studentvoice-worker"
version = "0.1.0"
description = "Deterministic media integrity and analysis worker for StudentVoice"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = ["blake3==1.0.5", "pydantic==2.11.7"]

[project.optional-dependencies]
analysis = ["faster-whisper==1.1.1", "paddleocr==3.1.0", "opencv-python-headless==4.12.0.88"]
dev = ["pytest==8.4.1", "ruff==0.15.22"]

[project.scripts]
studentvoice-worker = "studentvoice_worker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.setuptools.packages.find]
include = ["studentvoice_worker*"]
exclude = ["tests*"]
